--- a/ASS-21.html
+++ b/ASS-21.html
@@ -7,5 +7,68 @@
 </head>
 <body>
     
+    <div class="reciept-body">
+        <div class="head">
+            <P class="head-text"><u>Reciept </u></P>
+            <img src="tata.png" class="logo">
+        </div>
+
+        <div class="foot">
+            <p class="from"><b>FROM</b>
+                <br>Patil Mahesh
+                <br>loni tal-rahata
+                <br>413711
+            </p>
+            <p class="reciept-info"> <b>RECIPT NO:-</b>
+                <br><b>RECIPT DATE:-</b>
+
+            </p>
+            <P class="reciept-info1">459454
+                <br>24-07-2023
+
+
+            </P>
+        </div>
+
+        <div class="foot">
+            <p class="from"><b>BILL TO</b>
+                <br>More omkar
+                <br>Rahuri
+                <br>413711
+            </p>
+            <p class="reciept-info"> <b>SHIP TO</b>
+                <br>Rahuri factory
+                <br>tal-rahuri
+                <br>473821
+
+            </p>
+            <P class="reciept-info1">459454
+                <br>24-07-2023
+
+
+            </P>
+        </div>
+        <br>
+        <br>
+
+        <br>
+        <br>
+        <div class="end">
+            <p class="total">
+                Total:-
+            </p>
+            <p>2200</p>
+        </div>
+        <hr>
+        <hr>
+        <div class="status">
+            <img src="sign.jpg" class="sign">
+
+        </div>
+
+
+    </div>
+
+
 </body>
 </html>
