--- a/ASS-21.html
+++ b/ASS-21.html
@@ -50,7 +50,37 @@
         </div>
         <br>
         <br>
-
+        <table border="2" class="table">
+            <thead>
+                <th>QTY</th>
+                <th>DESCRIPTION</th>
+                <th>UNIT PRICE</th>
+                <th>AMOUNT</th>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>2</td>
+                    <td>shirt</td>
+                    <td>600</td>
+                    <td>1200</td>
+                </tr>
+                <tr>
+                    <td>1</td>
+                    <td>trousers</td>
+                    <td>800</td>
+                    <td>800</td>
+                </tr>
+                <tr>
+                    <td>2</td>
+                    <td>cap</td>
+                    <td>100</td>
+                    <td>200</td>
+                </tr>
+            </tbody>
+        </table>
+        <br>
+        <br>
+        <div class="end">
         <br>
         <br>
         <div class="end">
