--- a/ASS-21.html
+++ b/ASS-21.html
@@ -5,6 +5,92 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+<style>
+    .body {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        background-color: #FFEAE3;
+
+    }
+
+    .reciept-body {
+        border: 2px solid black;
+        height: 1200px;
+        width: 70%;
+        background-color: ;
+
+    }
+
+    .head {
+        display: flex;
+
+        justify-content: end;
+        border-bottom: 3px dashed black;
+
+    }
+
+    .logo {
+        border-radius: 50%;
+        height: 100PX;
+        margin: 20PX 40PX;
+
+    }
+
+    .head-text {
+        font-size: xxx-large;
+        margin-right: auto;
+        margin-left: auto;
+
+    }
+
+    .foot {
+        display: flex;
+        flex-direction: row;
+        border-bottom: 3px dashed black;
+        font-size: x-large;
+
+    }
+
+    .from {
+
+        margin-left: 100px;
+
+    }
+
+    .reciept-info {
+        margin-left: 600px;
+    }
+
+    .reciept-info1 {
+        margin-left: 20px;
+    }
+
+    .table {
+        margin-left: auto;
+        margin-right: auto;
+        font-size: xx-large;
+
+    }
+
+    .end {
+        display: flex;
+        font-size: xx-large;
+        justify-content: flex-end;
+    }
+
+    .total {
+        margin-right: 200px;
+    }
+    .status{display: flex;
+    flex-direction: row;
+    justify-content: end;
+}
+.sign{
+    height: 190px;
+}
+</style>
+
 <body>
     
     <div class="reciept-body">
