all program added

--- a/ASS-21.html
+++ b/ASS-21.html
@@ -1,108 +1,109 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>Document</title>
 </head>
-<style>
-    .body {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        background-color: #FFEAE3;
 
-    }
+<body class="body">
+    <style>
+        .body {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            background-color: #d65093;
 
-    .reciept-body {
-        border: 2px solid black;
-        height: 1200px;
-        width: 70%;
-        background-color: ;
+        }
 
-    }
+        .reciept-body {
+            border: 2px solid black;
+            height: 1200px;
+            width: 70%;
+            background-color: ;
 
-    .head {
-        display: flex;
+        }
 
-        justify-content: end;
-        border-bottom: 3px dashed black;
+        .head {
+            display: flex;
 
-    }
+            justify-content: end;
+            border-bottom: 3px dashed black;
 
-    .logo {
-        border-radius: 50%;
-        height: 100PX;
-        margin: 20PX 40PX;
+        }
 
-    }
+        .logo {
+            border-radius: 50%;
+            height: 100PX;
+            margin: 20PX 40PX;
 
-    .head-text {
-        font-size: xxx-large;
-        margin-right: auto;
-        margin-left: auto;
+        }
 
-    }
+        .head-text {
+            font-size: xxx-large;
+            margin-right: auto;
+            margin-left: auto;
 
-    .foot {
-        display: flex;
+        }
+
+        .foot {
+            display: flex;
+            flex-direction: row;
+            border-bottom: 3px dashed black;
+            font-size: x-large;
+
+        }
+
+        .from {
+
+            margin-left: 100px;
+
+        }
+
+        .reciept-info {
+            margin-left: 600px;
+        }
+
+        .reciept-info1 {
+            margin-left: 20px;
+        }
+
+        .table {
+            margin-left: auto;
+            margin-right: auto;
+            font-size: xx-large;
+
+        }
+
+        .end {
+            display: flex;
+            font-size: xx-large;
+            justify-content: flex-end;
+        }
+
+        .total {
+            margin-right: 200px;
+        }
+        .status{display: flex;
         flex-direction: row;
-        border-bottom: 3px dashed black;
-        font-size: x-large;
-
+        justify-content: end;
     }
-
-    .from {
-
-        margin-left: 100px;
-
+    .sign{
+        height: 190px;
     }
+    </style>
 
-    .reciept-info {
-        margin-left: 600px;
-    }
 
-    .reciept-info1 {
-        margin-left: 20px;
-    }
-
-    .table {
-        margin-left: auto;
-        margin-right: auto;
-        font-size: xx-large;
-
-    }
-
-    .end {
-        display: flex;
-        font-size: xx-large;
-        justify-content: flex-end;
-    }
-
-    .total {
-        margin-right: 200px;
-    }
-    .status{display: flex;
-    flex-direction: row;
-    justify-content: end;
-}
-.sign{
-    height: 190px;
-}
-</style>
-
-<body>
-    
     <div class="reciept-body">
         <div class="head">
             <P class="head-text"><u>Reciept </u></P>
-            <img src="tata.png" class="logo">
+            <img src="mahindra.png" class="logo">
         </div>
 
         <div class="foot">
             <p class="from"><b>FROM</b>
-                <br>Patil Mahesh
-                <br>loni tal-rahata
+                <br>pranay hure
+                <br>kolhar tal-rahata
                 <br>413711
             </p>
             <p class="reciept-info"> <b>RECIPT NO:-</b>
@@ -118,8 +119,8 @@
 
         <div class="foot">
             <p class="from"><b>BILL TO</b>
-                <br>More omkar
-                <br>Rahuri
+                <br>akash chavan
+                <br>shevagav
                 <br>413711
             </p>
             <p class="reciept-info"> <b>SHIP TO</b>
@@ -167,9 +168,6 @@
         <br>
         <br>
         <div class="end">
-        <br>
-        <br>
-        <div class="end">
             <p class="total">
                 Total:-
             </p>
@@ -178,8 +176,8 @@
         <hr>
         <hr>
         <div class="status">
-            <img src="sign.jpg" class="sign">
-
+            <img src="stamp.png" class="sign">
+       
         </div>
 
 
@@ -187,4 +185,5 @@
 
 
 </body>
+
 </html>
